Fixed recipe summary layout problem.

--- a/recipe.css
+++ b/recipe.css
@@ -1,54 +1,14 @@
 
 
-/* Summary Box */
-.recipe-summary {
-  float: right;
-  margin:0; padding:0;
-  width: 20em;
-}
-.recipe-summary table {
-  border-collapse: collapse;
-}
-.recipe-summary td,
-.recipe-summary th {
-  border: 1px solid #aaa;
-  padding: .2em;
-}
-.recipe-summary th {
-  background: #E0E0E0;
-  color: black;
-  font-weight: bold;
-}
-.recipe-summary td {
-  background: white;
-  color: black;
-}
-#edit-custom-yield-wrapper {
-  display: inline;
-}
-.summary-data, .summary-title {
-  width: 10em;
-}
-.recipe-summary p {
-  margin:0; padding:0;
-}
-.recipe-summary h2 {
-  margin:0; padding:0;
-}
 
-.recipe-section p {
+.recipe-section div.section {
   margin: 0;
   padding: 0 0 0 1.5em;
-}
-
-.recipe-description {
-  width: 50%;
 }
 
 .recipe-ingredients .quantity-unit {
   float: left;
   width: 7em;
-  padding: 0 0 0 1.5em;
 }
 
 #recipe_custom_yield fieldset .form-item {
@@ -95,4 +55,46 @@
 
 .recipe-import-text {
   font-family: monospace;
+}
+
+
+
+
+
+/* Summary Box */
+.recipe-summary {
+  float: right;
+  margin:0; padding:0;
+  width: 20em;
+  font-size: 1.0em;
+}
+.recipe-summary table {
+  border-collapse: collapse;
+}
+.recipe-summary td,
+.recipe-summary th {
+  border: 1px solid #aaa;
+  padding: .2em;
+}
+.recipe-summary th {
+  background: #E0E0E0;
+  color: black;
+  font-weight: bold;
+  width: 4em;
+}
+.recipe-summary td {
+  background: white;
+  color: black;
+}
+.recipe-summary .form-item {
+  display: inline;
+}
+.summary-data, .summary-title {
+  width: 10em;
+}
+.recipe-summary p {
+  margin:0; padding:0;
+}
+.recipe-summary h2 {
+  margin:0; padding:0;
 }
